2002-10-25  Jason Flatt <jasonflatt@wizard.com>

		Set date correctly for MD5 removal entry in this file.

2002-10-25  Jason Flatt <jasonflatt@wizard.com>

		Modified BUILD for init script stuff as per Neal Birch's recomendations.

2002-10-25  Jason Flatt <jasonflatt@wizard.com>

		Removed MD5 for cupsomatic as it changes frequently and I don't want to keep
		the spell from casting when I will not be able to keep up on the MD5.

2002-10-23  Jason Flatt <jasonflatt@wizard.com>

		Added TRIGGERS for optional_depends LinuxPAM.

2002-10-20  Jason Flatt <jasonflatt@wizard.com>

		Changed the way the init script is done to address bug # 1358.

2002-10-14  Jason Flatt <jasonflatt@wizard.com>

		Modified DETAILS to address bug # 1180.

2002-10-07  Jason Flatt <jasonflatt@wizard.com>

		Updated VERSION to 1.1.16.

2002-10-03  Jason Flatt <jasonflatt@wizard.com>

		Updated MD5 for cupsomatic.

2002-09-24  Jason Flatt  <jasonflatt@wizard.com>

		Moved symlink queries to CONFIGURE (hopefully fixes bug # 895).
		Removed cupsomatic and set it up to be downloaded during cast.
		Re-added Makefile.diff (I have no idea what happened to that file.)

2002-09-08  Eric Sandall <eric@sandall.us>

		Fixed Bug #856

2002-08-27  Jason Flatt  <jasonflatt@wizard.com>

		Cleaned up DEPENDS.
		Changed espgs from optional_depends to depends.
		Reformatted this file.

2002-08-17  Jason Flatt  <jasonflatt@wizard.com>

		Replaced cupsomatic with cupsomatic.tar.bz2.
		Doing my part for the dial-up users of the world.  :^)

2002-08-16  Jason Flatt  <jasonflatt@wizard.com>

		Added the cupsomatic file during install.

2002-08-15  Jason Flatt  <jasonflatt@wizard.com>

		Many things.  I hope I remember them all.
		Modified the conflict checking to hopefully work a little better.
		Added a suggestion from Eric Sandall to hopefully kill bug # 237.
		Revamped how the init scripts are installed and setup.
		Modified how CUPS is installed w/Samba to eliminate a (unreported) bug in the original code.
