@@ -1,3 +1,13 @@
+2002-11-01  Jason Flatt <jasonflatt@wizard.com>
+
+		Fixed BUILD file to take care of bug # 1542.
+
+		Fixed POST_INSTALL and PRE_REMOVE to account for cups
+		init script name change (thanks to Tom Garland).
+
+		Added a second cups init script to account for another bug which was
+		discovered during the fixing and testing of the above two bugs.  :^)
+
 2002-10-25  Jason Flatt <jasonflatt@wizard.com>
 
 		Set date correctly for MD5 removal entry in this file.
